# aerosense-dashboard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
dashboard/: graphs.py  queries.py
dashboard/components/: __init__.py  about.py  installation_select.py  nav.py  sensor_select.py  time_range_select.py  y_axis_select.py
docs/source/: conf.py
