[project]

[tool.poetry]
name = "aerosense-dashboard"
version = "0.1.0"
description = "High-level visualisation for aerosense"
authors = ["Tom Clark", "Marcus Lugg", "Yuriy Marykovsky"]
license = "BSD-3"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
repository = "https://github.com/aerosense-ai/aerosense-dashboard"
packages = [{ include = "dashboard"}]
keywords = ["aerosense", "dashboard"]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Sphinx = {version = ">=4,<5", optional = true}
sphinx-rtd-theme = {version = "1.0.0", optional = true}
sphinx-tabs = {version = "3.2.0", optional = true}
sphinx-charts = {version = "0.1.2", optional = true}
sphinx-math-dollar = {version = "1.2.0", optional = true}
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
google-cloud-bigquery = {extras = ["bqstorage", "pandas"], version = "^3.0.1"}
plotly = "^5.7.0"
gunicorn = "^20.1.0"
dash = "^2.4.1"
Flask-Caching = "^2.0.0"

[tool.poetry.dev-dependencies]
coverage = "^6.2"
pre-commit = "^2.17.0"
pytest-sugar = "^0.9.4"
pytest-asyncio = "^0.17.2"
pytest = "^6.2.5"
tox = "^3.24.5"
tox-gh-actions = "^2.9.1"
tox-poetry = "^0.4.1"
python-dotenv = "^0.20.0"


[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinx-tabs", "sphinx-charts", "sphinx-math-dollar"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
